Bug 262939 - Kateviewinternal does not check for availability of Qt accessibility module.
Summary: Kateviewinternal does not check for availability of Qt accessibility module.
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: part (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-12 12:52 UTC by Artem Anisimov
Modified: 2011-05-02 19:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.0
Sentry Crash Report:


Attachments
Patch that disables kateviewinternal's support for accessibility on systems that do not use it. (1.60 KB, patch)
2011-01-12 12:54 UTC, Artem Anisimov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Artem Anisimov 2011-01-12 12:52:48 UTC
Version:           4.6 (using KDE 4.5.95) 
OS:                All

Subj.

I have attached a patch that makes kateviewinternal disable its support for accessibility on systems that do not use it.

Reproducible: Always

Steps to Reproduce:
Compile Qt with -no-accessibility and then compile kdelibs.

Actual Results:  
Compilation of kdelibs fails.

Expected Results:  
Kateviewinternal should disable its support for accessibility.
Comment 1 Artem Anisimov 2011-01-12 12:54:44 UTC
Created attachment 55906 [details]
Patch that disables kateviewinternal's support for accessibility on systems that do not use it.
Comment 2 Mike Frysinger 2011-02-22 05:42:29 UTC
blah, i just wrote the same patch.  wish i searched first ;).

i wonder if the QT_NO_ACCESSIBILITY check should be after the local includes though ... that way the QT headers are included to provide the define.
Comment 3 Artem Anisimov 2011-04-12 19:03:46 UTC
Hi again!

Guys, you already have a patch for this bug. Why not fix it?
Comment 4 Thiago Macieira 2011-05-01 23:59:08 UTC
Less-than-full Qt is not supported. Simply enable accessibility support in Qt and the problem is gone.
Comment 5 Mike Frysinger 2011-05-02 00:23:40 UTC
the code already has proper #ifdef checks in places, and everything else in KDE that ive used builds fine.  and someone already has posted a trivial patch.  all you have to do is merge it.
Comment 6 Dominik Haumann 2011-05-02 19:41:37 UTC
Git commit cb20a83c3806698a35a0ec7a9d24f4dfebe1736b by Dominik Haumann.
Committed on 02/05/2011 at 19:50.
Pushed by dhaumann into branch 'master'.

check for availability of Qt accessibility module

Thanks to Artem Anisimov for the patch & sorry for the delay!
BUG: 262939
FIXED-IN: 4.7.0

M  +2    -0    part/view/kateviewaccessible.h     
M  +6    -0    part/view/kateviewinternal.cpp     

http://commits.kde.org/kate/cb20a83c3806698a35a0ec7a9d24f4dfebe1736b