check for availability of Qt accessibility module

Thanks to Artem Anisimov for the patch & sorry for the delay!
BUG: 262939
FIXED-IN: 4.7.0